@@ -1,6 +1,8 @@
 "538bdc83ec0883e4f883c404558b6b??896c24??8bec6aff68????????64a1????????505383ec105657a1????????33c5508d45??64a3????????8bf9897d":
 __thiscall void Game::constructor();
 
+"558bec6aff68????????64a1????????5083ec40a1????????33c58945??535657508d45??64a3????????c745??00000000":
+__thiscall void Game::StartDebug(int levelStage,int stageType,int difficulty,std_string* unk); 
 
 /*
 FuncSignature Signature_GameIsPaused = {
