@@ -1,0 +1,14 @@
+"558BEC8B45??535632DB578BF983F8FF75??8B47??8D4F??6AFF894D??FF50??8B47??33F68B57??2BC2C1F80285C074??8B0C??FF75??8B018B40??FFD08AD884DB75??8B4F??468B57??2BCAC1F9023BF172??8B4D??8B01FF50??5F5E8AC35B5DC20C008B55??85D274??8B47??8B04??8B40??89028B4D??8B01FF50??5F5E8AC35B5DC20C0050E8????????8BF085F674??8B168BCEFF75??8B52??FFD28AD88B4D??85C974??84DB74??8B46??89015F5E8AC35B5DC20C00??????????558BECFF75??8B01FF75??FF75??8B40??FFD084C00F94C05DC20C00????????558BEC518B45??0F57C0F30F1145??56578BF983F8FF0F85????????8B47??8D4F??6AFF894D??FF50??8B47??33F68B4F??2BC1C1F80285C074??538B5D??908B0C??538B018B40??FFD084C075??8B47??468B4F??2BC1C1F8023BF072??8B4D??5B8B01FF50??D945??5F5E8BE55DC20C008B47??538B0C??8B018B40??FFD08B4D??D95D??85C974??F30F1045??0F2E05????????9FF6C4447B??8B47??8B04??8B40??89015B8B4D??8B01FF50??D945??5F5E8BE55DC20C0050E8????????8BF085F674??8B168BCEFF75??8B52??FFD2D95D??8B4D??85C974??F30F1045??0F2E05????????D945??9FF6C4447B??8B46??5F89015E8BE55DC20C00558BECFF75??E8????????85C074??8B108BC8FF52??5DC2040083C8FF":
+__thiscall bool InputBase::IsButtonTriggered(int btnaction,int controllerid,int unk);
+
+struct InputBase {
+};
+
+struct InputManager {
+{{
+	inline InputBase* GetActualInput() { return (InputBase*)((char*)this +563428); } 
+}}
+};
+
+"b9(????????)e8????????84c075??6a006aff6a0fb9????????e8????????84c00f84????????8d8b":
+reference InputManager* g_InputManagerBase;
