@@ -3,6 +3,7 @@ Additions:
 * Weapon :
 	- SetModifiers
 * Added Chinese translation text, thanks @502y
+* Added support for the pocketActive param in players.xml(I forgor)
 /newline/
 Modified:
 * PlayerManager :
